--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "firebase/php-jwt": "^5.0",
         "guzzlehttp/guzzle": "^6.3",
+        "ixudra/curl": "^6.16",
         "laravel/framework": "5.7",
         "laravel/tinker": "^1.0"
     },
